recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:46: error: expected start of definition
	override def run() {
                 ^SquareKoch:49: error: Unmatched closing brace '}' ignored here
}
^